refactor : updateMatchListNotDuplicated 메서드 내의 복잡한 로직 process()로 분리