@@ -1,6 +1,7 @@
 package com.foss.server.service;
 
 import com.foss.server.api.NexonApiClient;
+import com.foss.server.api.dto.user.UserDivisionDto;
 import com.foss.server.dao.MatchRepository;
 import com.foss.server.domain.match.Match;
 import com.foss.server.dto.MatchMapper;
@@ -11,44 +12,49 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class AsyncMatchService {
-
     private final NexonApiClient nexonApiClient;
     private final MatchRepository matchRepository;
+    private final ConcurrentHashMap<String, CompletableFuture<UserDivisionDto>> divisionFutureMap = new ConcurrentHashMap<>();
+
     @Async
     public CompletableFuture<Void> updateMatchListNotDuplicated(String ouid, int matchType) {
         String[] matchList = nexonApiClient.requestMatchList(ouid, matchType);
-        List<Match> matches = new ArrayList<>();
         List<String> idNotInList = matchRepository.findNonExistingIds(Arrays.asList(matchList));
 
-        List<CompletableFuture<MatchDto>> futures = idNotInList.stream()
-                .map(nexonApiClient::requestMatchInfoAsync).toList();
+        List<CompletableFuture<Void>> matchFutures = idNotInList.stream()
+                .map(id -> processMatchInfo(id))
+                .collect(Collectors.toList());
 
-        CompletableFuture<Void> allFutures = CompletableFuture.allOf(
-                futures.toArray(new CompletableFuture[0])
-        );
+        return CompletableFuture.allOf(matchFutures.toArray(new CompletableFuture[0]))
+                .thenRun(() -> log.info("모든 매치 정보와 부문 정보가 성공적으로 업데이트되었습니다."));
+    }
 
-        return allFutures.thenAcceptAsync(unused -> {
-            for (CompletableFuture<MatchDto> future : futures) {
-                try {
-                    MatchDto matchDto = future.get();
-                    matches.add(MatchMapper.matchToEntity(matchDto));
-                } catch (InterruptedException | ExecutionException e) {
-                    throw new ManyRequestException();
-                }
-            }
-            matchRepository.saveAll(matches);
-        });
+    private CompletableFuture<Void> processMatchInfo(String id) {
+        return nexonApiClient.requestMatchInfoAsync(id)
+                .thenCompose(matchDto -> {
+                    Match match = MatchMapper.matchToEntity(matchDto);
+                    return processDivisionInfo(match);
+                });
+    }
 
+    private CompletableFuture<Void> processDivisionInfo(Match match) {
+        List<CompletableFuture<Void>> divisionFutures = match.getNickname().keySet().stream()
+                .map(nickname -> divisionFutureMap.computeIfAbsent(nickname, k -> nexonApiClient.requestUserDivisionAsync(k))
+                        .thenAccept(divisionDto -> match.addDivision(nickname, divisionDto)))
+                .collect(Collectors.toList());
+
+        return CompletableFuture.allOf(divisionFutures.toArray(new CompletableFuture[0]))
+                .thenRun(() -> matchRepository.save(match));
     }
 
 }
